# dnsxy

./: Cargo.toml  README.md
src/: main.rs  proxy.rs
