[package]
name = "dnsxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
socks = "0.3.4"
trust-dns-resolver = "0.22.0"
trust-dns-server = "0.22.1"
